@@ -19,7 +19,6 @@ import javafx.scene.layout.VBox;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Collectors;
 
 /**
  * Controller dedicado à fila de aprovação de motoristas pendentes.
@@ -55,6 +54,7 @@ public class PendingDriversController implements AdminSectionController {
     @FXML private Label detailPhoneLabel;
     @FXML private Label detailLicenseLabel;
     @FXML private Label detailRegisteredLabel;
+    @FXML private javafx.scene.control.TextArea noteField;
     @FXML private Button detailApproveButton;
     @FXML private Button detailRejectButton;
 
@@ -140,14 +140,16 @@ public class PendingDriversController implements AdminSectionController {
 
     private void doApprove(AdminUserDTO driver) {
         if (approvalPresenter == null) { showFeedback("Serviço não disponível.", true); return; }
-        DriverApprovalPresenter.PersistResult result = approvalPresenter.approve(driver, null);
+        String note = noteField != null ? noteField.getText() : null;
+        DriverApprovalPresenter.PersistResult result = approvalPresenter.approve(driver, note);
         showFeedback(result.message(), !result.success());
         if (result.success()) { pendingTable.getSelectionModel().clearSelection(); reload(); }
     }
 
     private void doReject(AdminUserDTO driver) {
         if (approvalPresenter == null) { showFeedback("Serviço não disponível.", true); return; }
-        DriverApprovalPresenter.PersistResult result = approvalPresenter.reject(driver, null);
+        String note = noteField != null ? noteField.getText() : null;
+        DriverApprovalPresenter.PersistResult result = approvalPresenter.reject(driver, note);
         showFeedback(result.message(), !result.success());
         if (result.success()) { pendingTable.getSelectionModel().clearSelection(); reload(); }
     }
@@ -168,10 +170,7 @@ public class PendingDriversController implements AdminSectionController {
         if (q.isBlank()) {
             filtered.setAll(allPending);
         } else {
-            List<AdminUserDTO> result = allPending.stream()
-                    .filter(u -> matches(u, q))
-                    .collect(Collectors.toList());
-            filtered.setAll(result);
+            filtered.setAll(allPending.stream().filter(u -> matches(u, q)).toList());
         }
         updateInfoLabel();
     }
@@ -200,9 +199,9 @@ public class PendingDriversController implements AdminSectionController {
     private void bindDetailPanel(AdminUserDTO u) {
         setText(detailNameLabel,       u.getName());
         setText(detailEmailLabel,      u.getEmail());
-        setText(detailPhoneLabel,      u.getPhone() != null ? u.getPhone() : "—");
-        setText(detailLicenseLabel,    u.getLicenseNumber() != null ? u.getLicenseNumber() : "—");
-        setText(detailRegisteredLabel, u.getCreatedAt() != null ? u.getCreatedAt().format(DATE_FMT) : "—");
+        setText(detailPhoneLabel,      u.getPhone());
+        setText(detailLicenseLabel,    u.getLicenseNumber());
+        setText(detailRegisteredLabel, u.getCreatedAt() != null ? u.getCreatedAt().format(DATE_FMT) : null);
     }
 
     private void updateActionButtons(AdminUserDTO selected) {
@@ -217,6 +216,9 @@ public class PendingDriversController implements AdminSectionController {
         if (detailPanel != null) {
             detailPanel.setVisible(visible);
             detailPanel.setManaged(visible);
+        }
+        if (!visible && noteField != null) {
+            noteField.clear();
         }
     }
 
@@ -237,9 +239,9 @@ public class PendingDriversController implements AdminSectionController {
         colEmail.setCellValueFactory(cd -> new SimpleStringProperty(
                 AdminFormatUtils.fallback(cd.getValue().getEmail())));
         colPhone.setCellValueFactory(cd -> new SimpleStringProperty(
-                cd.getValue().getPhone() != null ? cd.getValue().getPhone() : "—"));
+                AdminFormatUtils.fallback(cd.getValue().getPhone())));
         colLicense.setCellValueFactory(cd -> new SimpleStringProperty(
-                cd.getValue().getLicenseNumber() != null ? cd.getValue().getLicenseNumber() : "—"));
+                AdminFormatUtils.fallback(cd.getValue().getLicenseNumber())));
         colRegistered.setCellValueFactory(cd -> {
             var t = cd.getValue().getCreatedAt();
             return new SimpleStringProperty(t != null ? t.format(DATE_FMT) : "—");
